--- a/index.html
+++ b/index.html
@@ -13,7 +13,42 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<section class="gameboard">
 
+			<div id="1" class="empty">
+	
+			</div>
+			<div id ="2" class="empty">
+	
+			</div>
+			<div id ="3" class="empty">
+	
+			</div>
+	
+			<div id="4" class="empty">
+	
+			</div>
+			<div id="5" class="empty">
+	
+			</div>
+			<div id="6" class="empty">
+	
+			</div>
+	
+			<div class="empty" id="7">
+	
+			</div>
+			<div class="empty" id="8">
+	
+			</div>
+			<div class="empty" id="9">
+	
+			</div>
+		</section>
+		<button class="reset" 
+		  type="button">
+		  Reset
+		</button>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
