HTML- remove spaces, add landmarks

--- a/index.html
+++ b/index.html
@@ -2,53 +2,31 @@
 <html lang="en">
 	<head>
   	<meta charset="utf-8">
-  	<meta name="description" content="Your description goes here">
-  	<meta name="keywords" content="one, two, three">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="description" content="Play Tic-Tac-Toe">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Blank Template</title>
+	<title>Tic-Tac-Toe</title>
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+	<!-- external CSS link -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<section class="gameboard">
+		<main>
+			<section class="gameboard">
+				<div id="1" class="empty"></div>
+				<div id ="2" class="empty"></div>
+				<div id ="3" class="empty"></div>
+				<div id="4" class="empty"></div>
+				<div id="5" class="empty"></div>
+				<div id="6" class="empty"></div>
+				<div class="empty" id="7"></div>
+				<div class="empty" id="8"></div>
+				<div class="empty" id="9"></div>
+			</section>
 
-			<div id="1" class="empty">
-	
-			</div>
-			<div id ="2" class="empty">
-	
-			</div>
-			<div id ="3" class="empty">
-	
-			</div>
-	
-			<div id="4" class="empty">
-	
-			</div>
-			<div id="5" class="empty">
-	
-			</div>
-			<div id="6" class="empty">
-	
-			</div>
-	
-			<div class="empty" id="7">
-	
-			</div>
-			<div class="empty" id="8">
-	
-			</div>
-			<div class="empty" id="9">
-	
-			</div>
-		</section>
-		<button class="reset" 
-		  type="button">
-		  Reset
-		</button>
+			<button class="reset" type="button">Reset</button>
+		</main>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
