Remove .empty classes

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	<body>
 		<main>
 			<section class="gameboard">
-				<div id="1" class="empty"></div>
-				<div id ="2" class="empty"></div>
-				<div id ="3" class="empty"></div>
-				<div id="4" class="empty"></div>
-				<div id="5" class="empty"></div>
-				<div id="6" class="empty"></div>
-				<div class="empty" id="7"></div>
-				<div class="empty" id="8"></div>
-				<div class="empty" id="9"></div>
+				<div id="1"></div>
+				<div id ="2"></div>
+				<div id ="3"></div>
+				<div id="4"></div>
+				<div id="5"></div>
+				<div id="6"></div>
+				<div id="7"></div>
+				<div id="8"></div>
+				<div id="9"></div>
 			</section>
 
 			<button class="reset" type="button">Reset</button>
