Add game-type inputs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 	</head>
 	<body>
 		<main>
+			<header>
+				<h1>Tic-Tac-Toe</h1>
+			</header>
+
+			<label>
+				<input type="radio" name="game-type" value="2-player">Player vs. Player
+			</label>
+			<label>
+				<input type="radio" name="game-type" value="AI">Player vs. Computer
+			</label>
 			<section class="gameboard">
 				<div id="1"></div>
 				<div id ="2"></div>
