--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</header>
 
 			<label>
-				<input type="radio" name="game-type" value="2-player">Player vs. Player
+				<input type="radio" name="game-type" value="2-player" checked>Player vs. Player
 			</label>
 			<label>
 				<input type="radio" name="game-type" value="AI">Player vs. Computer
